--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "asyncio>=4.0.0",
+    "chromadb>=1.3.7",
     "dotenv>=0.9.9",
     "gradio>=6.1.0",
+    "ollama>=0.6.1",
     "openai-agents[litellm]>=0.6.2",
     "requests>=2.32.5",
+    "unstructured[all-docs]>=0.18.21",
 ]
