--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "asyncio>=4.0.0",
+    "boto3>=1.42.13",
     "chromadb>=1.3.7",
     "dotenv>=0.9.9",
     "gradio>=6.1.0",
